//
// Copyright 2019, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.server.inbox;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option (internal_all) = true;

option java_package = "io.spine.server.inbox";
option java_outer_classname = "InboxProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "spine/client/entities.proto";
import "spine/core/event.proto";
import "spine/core/command.proto";
import "spine/server/sharding/sharding.proto";


// An identifier of an entity inbox.
//
message InboxId {

    // The ID of the entity.
    spine.client.EntityId entity_id = 1;

    // The type URL of the entity state.
    string type_url = 2;
}

// A label applied to the message in `Inbox`.
//
// Determines what to do with the message once it's time to dispatch it to its target, whether
// it's an entity or a standalone message handler.
//
enum InboxLabel {

    MD_UNKNOWN = 0;

    // Pass a command message to an `@Assign`-annotated command handler.
    HANDLE_COMMAND = 1;

    // Pass a command message to a `@Command`-annotated commander method.
    TRANSFORM_COMMAND = 2;

    // Pass an event message to a `@Subscribe`-annotated event subscriber.
    UPDATE_SUBSCRIBER = 3;

    // Pass an event message to a `@React`-annotated event reactor.
    REACT_UPON_EVENT = 4;

    // Pass an event message to a `@Apply(allowImport = "true")`-annotated event importer.
    IMPORT_EVENT = 5;

    // Pass an event message to a `@Command`-annotated commander method.
    COMMAND_UPON_EVENT = 6;
}

// A UUID-generated identifier of an `Inbox` message.
//
message InboxMessageId {

    string uuid = 1 [(required) = true];
}

// A message in the inbox.
//
message InboxMessage {

    // What the message is.
    oneof payload {

        core.Event event = 1;

        core.Command command = 2;
    }

    InboxLabel label = 3 [(required) = true];

    // A point in time when the message was received by the `Inbox` instance.
    google.protobuf.Timestamp when_received = 4 [(required) = true];

    spine.server.sharding.ShardIndex shard_index = 5;
}

// An `InboxMessage` stored in the `InboxStorage`.
//
message InboxMessageRecord {

    // The identifier of the `Inbox` in which this message is stored.
    InboxId inbox_id = 1 [(required) = true];

    InboxMessage message = 2;
}

// A record used to transfer the inbox contents to the storage.
//
message InboxContentRecord {

    // The contents of inbox.
    repeated InboxMessage message = 1;
}