syntax = "proto3";

package spine.test.client;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.client";
option java_outer_classname = "LoginProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";

message LoginStatus {
    option (entity) = { kind: PROCESS_MANAGER visibility: SUBSCRIBE };
    core.UserId user = 1;
    bool logged_in = 2;
    // The column field used for subscribing to the login status from the client.
    string user_id = 3 [(required) = true, (column) = true];
}
