syntax = "proto3";

package spine.test.server.event.funnel;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.server.event.funnel";
option java_outer_classname = "DocsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/time/time.proto";

message DocumentId {
    string uuid = 1;
}

message Document {
    option (entity) = {kind: AGGREGATE visibility: QUERY};

    DocumentId id = 1;

    string text = 2;

    core.UserId owner = 3;

    repeated core.UserId editor = 4;

    repeated core.UserId viewer = 5;

    time.LocalDateTime last_edit = 6;
}

message EditHistory {
    option (entity).kind = PROJECTION;

    DocumentId id = 1;

    repeated Edit edit = 2;
}

message Edit {

    core.UserId editor = 1;

    uint32 position = 2;

    uint32 chars_deleted = 3;

    string text_added = 4;
}
